# celerity

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: after_effects.rs  sine.rs
src/: catmullrom.rs  component_wise.rs  constant.rs  coordinate.rs  debug.rs  ease.rs  function.rs  interval.rs  interval_track.rs  lerp.rs  lib.rs  output.rs  path.rs  track.rs  track2.rs  util.rs
src/adapter/: chain.rs  cutoff.rs  cycle.rs  mod.rs  rev.rs
src/after_effects/: conv.rs  maybe_track.rs  mod.rs
src/after_effects/layers/: image.rs  mod.rs  null.rs  precomp.rs  shape.rs  solid.rs  text.rs
src/after_effects/shapes/: color.rs  ellipse.rs  fill.rs  free_poly.rs  mod.rs  rect.rs  star.rs  stroke.rs  transform.rs
src/combinator/: blend.rs  chain.rs  cutoff.rs  cycle.rs  delay.rs  interrupt.rs  mod.rs  rev.rs
src/combinators/: chain.rs  cutoff.rs  cycle.rs  interrupt.rs  mod.rs  rev.rs
src/ease/: bezier.rs  mod.rs  spline.rs
src/spline/: bezier.rs  bezier_ease.rs  bezier_path.rs  catmull_rom.rs  mod.rs
src/structured/: affine.rs  clock.rs  flip.rs  mod.rs  path.rs  radial.rs  retarget.rs  transform.rs
