[package]
name = "celerity"
version = "0.1.0"
authors = ["Brainium Studios LLC"]
edition = "2018"
description = "Buttery smooth animation toolkit"
documentation = "https://docs.rs/celerity"
repository = "https://github.com/BrainiumLLC/celerity"
readme = "README.md"
license = "Apache-2.0/MIT"

[dependencies]
bodymovin = { git = "https://github.com/BrainiumLLC/bodymovin-rs" }
gee = { git = "https://github.com/BrainiumLLC/gee" }
log = "0.4.11"
paste = "1.0"
rainbow = { git = "https://github.com/BrainiumLLC/rainbow" }
replace_with = "0.1.7"
thiserror = "1.0.24"
time-point = "0.1.1"
